경로등 수정

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "build": "src/"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +48,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/pf/2912/TEST/"
+  "homepage": "https://wooreeweb.com/pf/2912/paulbasset",
+  "devDependencies": {
+    "npm-watch": "^0.11.0"
+  }
 }
