--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling": "^0.1.13",
     "react-horizontal-scrolling-menu": "^3.2.0",
+    "react-phone-number-input": "^3.2.11",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-strap": "^0.0.1",
@@ -48,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://wooreeweb.com/pf/2912/paulbasset",
+  "homepage": "https://wooreeweb.com/pf/2912/BS/",
   "devDependencies": {
     "npm-watch": "^0.11.0"
   }
