--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://wooreeweb.com/pf/2912/BS/",
+  "homepage": "https://www.wooreeweb.com/pf/2912/bs/",
   "devDependencies": {
     "npm-watch": "^0.11.0"
   }
