--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.0",
     "bootstrap": "^5.2.2",
+    "jquery": "^3.6.1",
+    "jQuery": "^1.7.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
